# Motion-Planning-strategy-for-multi-agent-tethered-UAS-for-exploration-of-large-and-confined-assets

./: .gitignore  readme.md
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.5
install/isaac_sim_demo/share/isaac_sim_demo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/isaac_sim_demo/share/isaac_sim_demo/cmake/: isaac_sim_demoConfig.cmake
install/isaac_sim_demo/share/isaac_sim_demo/config/: kinematics.yaml  robot_desc.rviz  rviz_config.rviz  sensors_3d.yaml
install/isaac_sim_demo/share/isaac_sim_demo/launch/: environment.launch.py  hybrid_planner_launch.py  isaac_sim_demo_launch.py  joint_space.launch.py  lifecycle.py  motion_planning.launch.py  prismatic.launch.py  robot_desc.py  sensor_manager.launch.xml  test_moveit.launch.py
install/isaac_sim_demo/share/isaac_sim_demo/urdf/: 4_drones.urdf  4_drones_tmp.urdf  chain.xacro  chain_twin.xacro  isaac_twinGroup1_base_linkDrone4_5000_1.000000_1.000000.ikcache  link.xacro  twin.urdf  two_drones.urdf  two_drones.xacro
install/isaac_sim_demo/share/isaac_sim_demo/urdf/install/: local_setup.sh  setup.sh
install/isaac_sim_demo/share/isaac_sim_demo/urdf/log/: latest_build
install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.5
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.5  libmoveit_butterworth_filter.so.2.5.5  libmoveit_collision_detection.so.2.5.5  libmoveit_collision_detection_bullet.so.2.5.5  libmoveit_collision_detection_fcl.so.2.5.5  libmoveit_collision_distance_field.so.2.5.5  libmoveit_constraint_samplers.so.2.5.5  libmoveit_distance_field.so.2.5.5  libmoveit_dynamics_solver.so.2.5.5  libmoveit_exceptions.so.2.5.5  libmoveit_kinematic_constraints.so.2.5.5  libmoveit_kinematics_metrics.so.2.5.5  libmoveit_planning_interface.so.2.5.5  libmoveit_planning_request_adapter.so.2.5.5  libmoveit_planning_scene.so.2.5.5  libmoveit_robot_model.so.2.5.5  libmoveit_robot_state.so.2.5.5  libmoveit_robot_trajectory.so.2.5.5  libmoveit_test_utils.so.2.5.5  libmoveit_trajectory_processing.so.2.5.5  libmoveit_transforms.so.2.5.5
install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.5.5  libmotion_planning_pipeline_plugin.so.2.5.5  libmoveit_global_planner_component.so.2.5.5  libmoveit_hybrid_planning_manager.so.2.5.5  libmoveit_local_planner_component.so.2.5.5  libreplan_invalidated_trajectory_plugin.so.2.5.5  libsimple_sampler_plugin.so.2.5.5  libsingle_plan_execution_plugin.so.2.5.5
install/moveit_kinematics/lib/: libmoveit_cached_ik_kinematics_base.so.2.5.5  libmoveit_cached_ik_kinematics_plugin.so.2.5.5  libmoveit_lma_kinematics_plugin.so.2.5.5  libmoveit_srv_kinematics_plugin.so.2.5.5
install/moveit_planners_chomp/lib/: libmoveit_chomp_interface.so.2.5.5
install/moveit_planners_ompl/lib/: libmoveit_ompl_interface.so.2.5.5  libmoveit_ompl_planner_plugin.so.2.5.5
install/moveit_ros_benchmarks/lib/: libmoveit_ros_benchmarks.so.2.5.5
install/moveit_ros_control_interface/lib/: libmoveit_ros_control_interface_empty_plugin.so.2.5.5  libmoveit_ros_control_interface_gripper_plugin.so.2.5.5  libmoveit_ros_control_interface_plugin.so.2.5.5  libmoveit_ros_control_interface_trajectory_plugin.so.2.5.5
install/moveit_ros_move_group/lib/: libmoveit_move_group_capabilities_base.so.2.5.5  libmoveit_move_group_default_capabilities.so.2.5.5
install/moveit_ros_occupancy_map_monitor/lib/: libmoveit_ros_occupancy_map_monitor.so.2.5.5
install/moveit_ros_perception/lib/: libmoveit_depth_image_octomap_updater.so.2.5.5  libmoveit_depth_image_octomap_updater_core.so.2.5.5  libmoveit_lazy_free_space_updater.so.2.5.5  libmoveit_mesh_filter.so.2.5.5  libmoveit_point_containment_filter.so.2.5.5  libmoveit_pointcloud_octomap_updater.so.2.5.5  libmoveit_pointcloud_octomap_updater_core.so.2.5.5  libmoveit_semantic_world.so.2.5.5
install/moveit_ros_planning/lib/: libmoveit_collision_plugin_loader.so.2.5.5  libmoveit_constraint_sampler_manager_loader.so.2.5.5  libmoveit_cpp.so.2.5.5  libmoveit_default_planning_request_adapter_plugins.so.2.5.5  libmoveit_kinematics_plugin_loader.so.2.5.5  libmoveit_plan_execution.so.2.5.5  libmoveit_planning_pipeline.so.2.5.5  libmoveit_planning_scene_monitor.so.2.5.5  libmoveit_rdf_loader.so.2.5.5  libmoveit_robot_model_loader.so.2.5.5  libmoveit_trajectory_execution_manager.so.2.5.5
install/moveit_ros_planning_interface/lib/: libmoveit_common_planning_interface_objects.so.2.5.5  libmoveit_move_group_interface.so.2.5.5  libmoveit_planning_scene_interface.so.2.5.5
install/moveit_ros_robot_interaction/lib/: libmoveit_robot_interaction.so.2.5.5
install/moveit_ros_visualization/lib/: libmoveit_motion_planning_rviz_plugin.so.2.5.5  libmoveit_motion_planning_rviz_plugin_core.so.2.5.5  libmoveit_planning_scene_rviz_plugin.so.2.5.5  libmoveit_planning_scene_rviz_plugin_core.so.2.5.5  libmoveit_robot_state_rviz_plugin.so.2.5.5  (+4 more)
log/: latest_build
src/: visual.py
src/custom_interfaces/: CMakeLists.txt
src/floating_moveit_config/: .setup_assistant  CMakeLists.txt
src/four_drone_demo/: CMakeLists.txt
src/isaac_sim_demo/: CMakeLists.txt
src/isaac_sim_demo/config/: isaac_twin.srdf  isaac_twin.urdf.xacro  ompl_planning.yaml  par.yaml
src/isaac_sim_demo/include/isaac_sim_demo/: RRT_controller.hpp
src/isaac_sim_demo/launch/: cartesian_space.launch.py  test_launch.py  tf_to_pos_launch.py
src/isaac_sim_demo/log/: latest_build
src/isaac_sim_demo/src/: ..cpp  RRT_controller.cpp  StateSubscriber_node.cpp  cartesian.cpp  drone_marker_publisher.cpp  joint_space.cpp  markers.cpp  moveit_demo.cpp  ompl_controller_node.cpp  ompl_lifecycle.cpp  spawn_scene.cpp  tf_to_pos.cpp  visualization.cpp
src/isaac_sim_demo/urdf/: 4_drones copy.urdf  4_drones.xacro  4_drones_copy_2.urdf  chain.urdf  chain_twin.urdf  cylinder_macro.xacro  spherical_joint.xacro  test.urdf
src/isaac_twin_moveit_config/: CMakeLists.txt  package.xml
src/log/: latest_build
src/prismatic_moveit_config/: .setup_assistant  CMakeLists.txt
src/test_moveit_config/: .setup_assistant  sensors_3d.yaml
(+379 files in other folders)
